# multithreading

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
res/: format.cmake  format.cmd  format.sh  toolchain.cmake
src/: benchmarks.cpp  logger.cpp  logger.hpp  main.cpp  main.hpp  main.manifest
